changed overflow-x to overflow to also prevent vertical scroll on the HeroBanner

--- a/app/components/banners/banner.module.css
+++ b/app/components/banners/banner.module.css
@@ -24,7 +24,7 @@
     flex-direction: column;
     width: 50%;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .rightColumnImageContainer {
